Updating downloads page so that the beta release table is hidden by default if it is the same as the primary/stable release.

--- a/download.html
+++ b/download.html
@@ -85,7 +85,8 @@
             Most players will want to install the <a href="#testdiv" title="Jump to test releases on page." alt="Link to test releases on this page.">test release located at the bottom of the page</a> 
             as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind 
             this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get 
-            the primary release instead.  Most servers run the latest test release.
+            the primary release instead.  Most servers run the latest test release.  Note that sometimes the test release
+            and primary release are sometimes the same - in which case only the primary release will be listed.
         </p>
 
         <p><strong>Is Jedi Academy required to play?</strong><br>
@@ -100,8 +101,9 @@
         </p>
 
         <p><strong>Is macOS available?</strong><br>
-            A build for macOS Catalina (10.15) is available here, but is not supported.  The game should compile for newer versions of macOS if you wish to <a
-            href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github." target="_blank">build the source code yourself</a>.  
+            Mac builds are not supported at this time.  The game will likely compile for macOS if you wish to <a
+            href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github." target="_blank">build the source code yourself</a>,
+            but we have not tested it since OSX.
         </p>
 
         <p><strong>Do I need the map packs?</strong><br>
@@ -170,7 +172,7 @@
         <h1>Alternative Downloads</h1>
         <p>
             Need a download for a different operating system or looking for a different download? 
-            Two types of releases are available: 
+            Two types of releases are typically available: 
             <ul>
                 <li><strong><a href="#tablePrimaryDownload">Primary</a></strong>, the long-term, stable release.</li> 
                 <li><strong><a  href="#tableTestDownload">Test</a></strong>, the latest and greatest, beta release.</li>
