--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" onload="this.media='all'">
+        <link async rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" onload="this.media='all'">
         <link async rel="stylesheet" href="styles.css">
     </head>
     <body class="IndexPage">
