updating faq and newsfeed

--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
 
         <div class="maindiv">
             <h2>What is the game like?</h2>
-            <p>Current gameplay is a Star Wars FPS shooter, with some alternative objectives (such as capture the flag).  Earn credits by getting kills or completing objectives, then spend those credits on new equipment from the shop which is regularly refreshed with new items throughout the match.  Scores of different items are availble to use that offer a variety of different playstyles and strategies to experiment with.  Items include weapons: such as pistols, blaster rifles, grenades, trip mines, etc. Other examples of items include: shields, armor, jetpacks, and consumables. Check out the gameplay video below which highlights some of the newer introduced features in v1.3:</p>
+            <p>Current gameplay is a classless Star Wars FPS shooter, with some alternative objectives (such as capture the flag).  Earn credits by getting kills or completing objectives, then spend those credits on new equipment from the shop which is regularly refreshed with new items throughout the match.  Scores of different items are availble to use that offer a variety of different playstyles and strategies to experiment with.  Items include weapons: such as pistols, blaster rifles, grenades, trip mines, etc. Other examples of items include: shields, armor, jetpacks, and consumables. Check out the gameplay video below which highlights some of the newer introduced features in v1.3:</p>
 
             <div class="cookie-banner" id="cookieBanner">
                 <p>
@@ -70,7 +70,6 @@
             <h2>Where can I get JKG?</h2>
             <p>Visit the download section of the site <a href="./download.html">here!</a></p>
         </div>
-
 
         <div class="maindiv">
             <h2>How do I keep up to date with JKG?</h2>
@@ -161,20 +160,20 @@
         <div class="maindiv">
             <h2>What are these 'Phases' I've heard about?</h2>
             <p>
-                A long time ago, JKG was meant to be a JKA port-mod of Star Wars Galaxies (it was originally called JKA Galaxies). The project went through a lot of changes, and we decided we wanted to make a LMO (Large Multiplayer Online) RPG (Role-Playing Game) FPS (First Person Shooter) with our own storyline. This is sort of the same ultimate goal, but instead of waiting to release it all at once we have decided to stagger it out into four phases of release.  These are very much subject to change, especially phases later than Versus.  Our roadmap looks like this:<br>
+                A long time ago, JKG was meant to be a JKA port-mod of Star Wars Galaxies (it was originally called JKA Galaxies). The project went through a lot of changes, and we decided we wanted to make a LMO (Large Multiplayer Online) RPG (Role-Playing Game) FPS (First Person Shooter) with our own storyline. This is sort of the same ultimate goal, but instead of waiting to release it all at once we have decided to stagger it out into four phases of release.  These are very much subject to change, especially phases later than Versus.  Our project's roadmap looks like this:<br>
                 <br>
                 <h3>Phase 1: Versus (current iteration)</h3>
-                The goal here is to have a functioning arena based shooter (similar to games such as Call of Duty or Unreal Tournament) with the beginnings of some later RPG elements such as armor, pazaak card game, etc. There are two major milestones currently being worked on.  Milestone 3 includes new features like better melee, armor, shields, jetpacks, debuff system etc.  Milestone 4 primarily focuses on the all new saber system and related features such as duel mode. Later milestones will introduce the skill trees and a rudimentary system for spending xp in preparation for the eventual leveling system in Phase 2 and 3.  In Milestone 5, the Force will be reworked and greatly expanded on using the aforementioned skill tree system.  We are currently on <span id="version">[version]</span> of this phase.</a><br>
+                The goal here is to have a functioning arena based shooter (similar to games such as Call of Duty or Unreal Tournament) with the beginnings of some later RPG elements such as armor, pazaak card game, etc. Development focuses primarily on testing the PVP mechanics of Jedi Knight Galaxies. There are two major milestones currently being worked on.  Milestone 3 includes new features like better melee, armor, shields, jetpacks, debuff system etc.  Milestone 4 primarily focuses on the all new saber system and related features such as duel mode. Later milestones will introduce the <a href="https://jkhub.org/topic/7508-concept-skill-trees/" title="Skill Tree Outline - JKHub.org">skill trees</a> and a rudimentary system for spending xp on skills in preparation for the eventual (classless, point based) leveling system that be implemented in greater detail in Phase 2 and 3.  In Milestone 5, the Force will be reworked and greatly expanded on using the aforementioned skill tree system.  We are currently on <span id="version">[version]</span> of this phase.</a><br>
                 <br>
                 <h3>Phase 2: Coop</h3>
-                The main features that are added here include the NPC system and fleshing out of the dialogue system. They also include overhauls to the chat systems, fonts, UI, and more. Prep work for the leveling system and quest system to be introduced here. Gameplay will primarily consist of teams of players (or individuals) completing simple 'quest' objectives, while being opposed by NPCs, or other teams of players. The game will revolve around a major central city hub (likely Mos Eisley) from which player's can interact with NPCs and other players to start quests, form teams, and explore the world. Most quests that do not take part in the central city, will load a team of player's into an 'instance' where they will complete their quest objectives while isolated from other players not in their group. We may also attempt some MoBA like features (still needs discussion) in larger Phase 1 style matches.<br>
+                Gameplay will primarily consist of teams of players (or individuals) completing simple 'quest' objectives, while being opposed by NPCs, or (in rare cases) other teams of players. The game will revolve around a major central city hub (likely Mos Eisley) from which player's can interact with NPCs and other players to start quests, form teams, and explore the world. Most quests that do not take part in the central city, will load a team of player's into an 'instance' where they will complete their quest objectives while isolated from other players not in their group. Player's will be able to enter conversations with various NPCs, make dialogue choices, try to solve NPC character's problems (or take advantage of them) and fight against them in PVE content as part of cooperative team of players.  The main features that are added include the NPC system and dialogue system. NPC AI will be able to wield JKG weapons and use them strategically along with a scriptable LUA system for managing and directing NPCs. Phase 2 also include overhauls to <a href="https://jkhub.org/topic/8657-conceptplayer-trading/" title="Player Trading Concept Outline - JKHub.org">player trading</a>, <a href="https://jkhub.org/forums/topic/9879-conceptpvp-looting-wip/" title="Looting & Notoriety Concept - JKHub.org">looting/notoriety</a>, chat systems, <a href="https://jkhub.org/topic/10889-conceptplayer-organizations/" title="Player Organizations Concept - JKHub.org">player social systems</a>, fonts, UI, dynamic music system, a new renderer (rend2) and more. Additional fleshing out of the leveling system and skill trees will also occur.   We also plan to add some mechanics for <a href="https://jkhub.org/forums/topic/11588-conceptcrafting/" title="Crafting Concept Outline - JKHub.org"></a>resource gathering and crafting mechanics</a> during this phase. We may also attempt some MoBA like features (still needs discussion) in larger Phase 1 style matches.  Data is not persistent and lasts only for the duration of the server's play session.<br>
                 <br>
                 <h3>Phase 3: RPG</h3>
-                Open World RPG. The main features added here include quests, (more) minigames, and AI for existing minigames, like Pazaak. Also includes levelling up, experience, single person quests, large planet-themed maps, character creator, fully fleshed out skill system etc. This mode will mainly focus on implementing things from a single player's perspective (within a multiplayer environment). Data will be persistent and exist as long as the server is running.<br>
+                Open World RPG. The main features added here include quests, (more) minigames, and AI for existing minigames, like Pazaak. Also includes a more in depth leveling, XP and skill tree/point buying system, single/multiplayer player quests, large planet-themed maps (these will use chunk/cell loading), a robust character creator, and build upon several earlier mechanics. This mode will mainly focus on implementing things from a single player's perspective (within a multiplayer environment) and polishing previous mechanics. One major change from Phase 2 is that data will be semi-persistent and be tied to individual servers.<br>
                 <br>
                 <h3>Phase 4: LMO</h3>
-                Features to the main game include group quests, Looking For Group system, and a lot of the dungeons that were designed for Phase 2 brought back. Includes a master server based architecture and functioning account system. Data is stored persistently, and official servers are all interconnected.  At this point, the game is pretty much done.<br>
-                Later possible expansions: space battles, more worlds, additional minigames, etc.<br>
+                Features to the main game include larger group and faction quests, Looking For Group system, and a lot of the dungeons that were designed for Phase 2 brought back. Includes a master server based architecture and functioning account system. Data is stored persistently by a master server and shared between participating host servers, and official servers are all interconnected.  (You can still run private Phase 3 style servers if you want to).  Other necessary Large Multiplayer Online mechanics to facilitate large amounts of players will be added.  At this point, the game is pretty much done.  Community content updates will likely be the focus of future development efforts.<br>
+                Later possible expansions: space vehicles and battles, more worlds, procedural content, additional minigames, new quests etc.<br>
             </p>
         </div>
         <br>
@@ -228,7 +227,7 @@
         <div class="maindiv">
             <h2>What happened to jkgalaxies.com?</h2>
             <p>
-                Unfortunately, the domain expired and was bought out by a domain name troll/cybersquatter before we could acquire it from the original owner, Jake.  It is now marked up considerably and in the hands of a domain name retailer who has no intention of parting with it cheaply.  The site also fell into disrepair prior to that point, due to the annoyance of updating it constantly (we used Wordpress back then) and dealing with constant bot attacks.  At that point, the domain name expired.
+                Unfortunately, the domain expired and was bought out by a domain name troll/cybersquatter before we could acquire it from the original owner, Jake.  It is now marked up considerably and in the hands of a domain name retailer who has no intention of parting with it cheaply.  The site also fell into disrepair prior to that point, due to the annoyance of updating it constantly (we used Wordpress back then) and dealing with constant bot attacks.  At that point, the domain name expired.  Today, the original site's legacy and home lives on at jkgalaxies.net.
             </p>
         </div>
 
@@ -274,7 +273,7 @@
         <div class="maindiv" id="jetpacks">
             <h2>How do I use a jetpack?</h2>
             <p>
-                After purchasing a jetpack make sure it is equipped to your ACI (press i to open your inventory and assign it to an ACI slot, they auto assign themselves upon purchase so this is probably not needed).  Once equipped, you can press the use command (+use, the default binding is to e), while you are midair to activate it.  Alternatively you can also tap the ACI key the jetpack is bound to to activate (eg: 2).  Tap the key again to deactivate the jetpack.<br><br>
+                After purchasing a jetpack make sure it is equipped to your ACI (press i to open your inventory and assign it to an ACI slot, they auto assign themselves upon purchase so this is probably not needed).  Once equipped, you can press the use command (+use, the default binding is to e), while you are midair to activate it.  Alternatively you can also tap the ACI key the jetpack is bound to to activate (eg: press 2).  Tap the key again to deactivate the jetpack.<br><br>
                 There are different types of jetpacks, for example, the cheapest (and most difficult to control) are 'burst' jetpacks, which rapidly burn through a small fuel tank to provide a 'burst' jump.  While your jetpack is activated you can also hold down shift to engage the turbo.  Keep in mind this burns fuel even faster than normal.  Be warned, if your jetpack runs out of fuel it will shut off in mid air!  Jetpacks can also be disabled by certain types of ion and electrical damage.  Note: Most jetpacks cannot be activated while you are carrying the flag in CTF mode.
             </p>
         </div>
@@ -283,7 +282,7 @@
             <h2>How do shields work?</h2>
             <p>
                 After a shield is assigned to your ACI, your shield will start charging after its cooldown has expired.  Some shields do not have a cool down.  The shield bar (visible in the upper left corner of the UI), shows how strong your current shield is at the present moment.  Shields will act as a scapegoat for your health for certain types of damage.  If your shield is damaged, it will stop charging until the cooldown for the recharge resets.  If your shield is completely overloaded with damage (reduced to 0), you will be vulnerable to damage until it begins recharging.<br><br>
-                Blue damage plums appear if you are damaged and the shield does its job of protecting your hp from damage.  Please note that shields cannot protect you from all damage types. For example, slugthrowers or ACP can pierce through shields, and shields cannot protect you from fall damage or other similar circumstances.  Note some shields can be modified to protect or be vulnerable damage types different from standard shields.  Some shields may also have activatable effects which can be triggered by pressing the ACI key the shield is bound to.
+                Blue damage plums appear if you are damaged and the shield does its job of protecting your hp from damage.  Please note that shields cannot protect you from all damage types. For example, slugthrowers or ACP can pierce through shields, and shields cannot protect you from fall damage or other similar circumstances.  Note some shields can be modified to protect or be vulnerable damage types different from standard shields.  Some shields may also have activatable effects which can be triggered by pressing the ACI key the shield is bound to.  Some shields may also have side effects when overloaded.
             </p>
             <h2>What damage types do shields block?</h2>
             <p>
@@ -330,6 +329,13 @@
             <h2>How do I dodge?</h2>
             <p>
                 If the server has enabled dodging, you can dodge by rolling at the precise time you're about to take damage.  You can roll by pressing forward (w) then pressing the crouch (ctrl or c) key.  Dodging will help negate damage, but cannot nullify it completely.  A perfect dodge results in a reduction of more damage then one who's timing is off.
+            </p>
+        </div>
+
+        <div class="maindiv" id="fire">
+            <h2>Help! I'm on fire, how do I put it out?</h2>
+            <p>
+                If someone has lit you on fire (standard fire debuff), you can put it out by jumping into deep enough water, or by remembering to stop, drop, and roll!  (Rolling removes the fire debuff, you can roll with c/ctrl depending on your binds).
             </p>
         </div>
 
