--- a/about.html
+++ b/about.html
@@ -24,12 +24,13 @@
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
         
-        <link async rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" onload="this.media='all'">
-        <link async rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" media="print" onload="this.media='all'">
+        <noscript><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></noscript>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body class="AboutPage">
-        <div id="navbar">
-            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+        <div id="navbar" role="navigation">
+            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" width="65" height="65" align="right">
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
@@ -40,9 +41,10 @@
         
         <div class="logo" id="logo">
             <br>
-            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
+            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." width="728" height="305" align="center">
         </div>
 
+        <main>
         <h1>About</h1>
 
         <div class="centerdiv"><!--Carousel Wrapper-->
@@ -386,6 +388,7 @@
             </div>
         </div>
         </div>
+        </main>
 
         <!-- Media Links-->
         <div class="centerdiv" id="media-links">
