--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
-        <link async rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" onload="this.media='all'">
-        <link async rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" media="print" onload="this.media='all'">
+        <noscript><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></noscript>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body class="IndexPage">
-        <div id="navbar">
-            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+        <div id="navbar" role="navigation">
+            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" width="65" height="65" align="right">
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
@@ -41,12 +42,13 @@
         
         <div class="logo" id="logo">
             <br>
-            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
+            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." width="728" height="305" align="center">
         </div>
 
+        <main>
         <div class="maindiv">
         <h1>Welcome</h1>
-            <p id="welcomemsg"> <!--Note: this is dynamically loadable, but since we keep this static default text here in case they've got javascript disabled-->
+            <p id="welcomemsg"> <!--Note: this can be dynamically loadable, but is disabled since it doesn't change often (see scripts.js) -->
             Welcome to choices, welcome to adventures!  Jedi Knight Galaxies is a competitive and innovative multiplayer shooter, played out in the Star Wars universe. Currently a full conversion mod, the project was originally based on and modified from <a href="https://www.ravensoftware.com" alt="Link to Ravensoftware." title="Ravensoft's webpage.">Ravensoft’s</a> Q3-based game, <a href="https://en.wikipedia.org/wiki/Star_Wars_Jedi_Knight:_Jedi_Academy" alt="Link to JKA Wikipedia page." title="Link to JKA Wikipedia page.">Star Wars Jedi Knight: Jedi Academy</a>.<br><br>
             Jedi Knight Galaxies is open source and available completely free of charge; however, you will need the original game in order to play. We aim to develop the project into a Large Multiplayer Online game, crossing traditional RPG (role playing game) elements with the fast paced excitement of an FPS (first person shooter).  The game is a much loved hobby project supported by its community and developers who work on it in their freetime, contribution is encouraged and newbies are welcome.<br><br>
             Welcome to Jedi Knight Galaxies, where we break the limits!</p>
@@ -85,6 +87,7 @@
             <iframe src="https://e.widgetbot.io/channels/152168677578506240/152169339208990721" height="480" width="350"></iframe>
             -->
         </div>
+        </main>
 		
 		<a id="downloadHoverButton" href="download.html" class="bigDownloadHoverBtn" alt="Get JKG!" title="Get JKG!">&#8681;</a>
 
