--- a/servers.html
+++ b/servers.html
@@ -22,12 +22,13 @@
         <link rel="icon" type="image/png" href="images/JKG_logo-inverted-16x16.png" sizes="16x16">
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
-        <link async rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link async rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" media="print" onload="this.media='all'">
+        <noscript><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></noscript>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body class="ServersPage">
-        <div id="navbar">
-            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+        <div id="navbar" role="navigation">
+            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" width="65" height="65" align="right">
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
@@ -38,13 +39,15 @@
         
         <div class="logo" id="logo">
             <br>
-            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
+            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." width="728" height="305" align="center">
         </div>
 
+        <main>
         <div class="centerdiv">
             <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#autoRefresh=1&theme=dark&game=jkg&sortBy=humans" title="Click here to view JKG's serverlist." alt="Serverlist"><h1>JKG Servers</h1></a>
             <p>View a list of community servers that are currently hosting servers.  The serverlist is provided by/hosted by Flate.</p>
         </div>
+        </main>
 
 
         <div class="copyright">
