reverting accidental local styles.css change, should be full link so error pages don't break

--- a/update.index.html
+++ b/update.index.html
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#010412">
     <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script type="text/javascript">
