--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" media="print" onload="this.media='all'">
         <noscript><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></noscript>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
     </head>
     <body class="AboutPage">
         <div id="navbar" role="navigation">
