adding steam widget to faq and updating some info

--- a/faq.html
+++ b/faq.html
@@ -81,7 +81,7 @@
 
         <div class="maindiv">
             <h2>Which version should I install?</h2>
-            <p>Most people will want to install the <a href="https://www.jkgalaxies.net/download.html#testdiv">test release located at the bottom of the page</a> as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get the primary release instead.  Most servers run the latest test release.</p>
+            <p>Most will want to install the <a href="https://www.jkgalaxies.net/download.html#testdiv">test release located at the bottom of the page</a> as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get the primary release instead.  Most servers run the latest test release.  At times, you may only see a primary release available.  This occurs when the current test version has proven stable enough to become the primary release, and a new test version is still in development.</p>
         </div>
 
         <div class="maindiv">
@@ -192,15 +192,15 @@
 
         <div class="maindiv" id="contribute">
             <h2>How can I help contribute?</h2>
-            <p>We need your help!  There are many ways to help contribute, the first is by beta testing the mod and giving us your feedback on the <a href="https://jkhub.org/forums/forum/117-jedi-knight-galaxies/">Forums</a> or <a href="https://discord.gg/YuG8Zks">Discord</a>.  Sharing JKG with your friends also helps make it better, the more the merrier!</p>
+            <p>We need your help!  There are many ways to help contribute, the first is by beta testing the mod and giving us your feedback on the <a href="https://jkhub.org/forums/forum/117-jedi-knight-galaxies/">Forums</a> or <a href="https://discord.gg/YuG8Zks">Discord</a>.  Sharing JKG with your friends also helps make it better, the more the merrier!  Streaming or making video content of JKG also helps!</p>
             <p>If you know how to code, map, model, animate, or do other types of game dev things you can also try modding JKG first to get a hang of how things work.  Try creating a new weapon for example, then jump on the Discord and show off what you've done!  If you feel you have time and talent to help, you could also join the developers and help us make the game even better, just let us know what you're interested in doing and show off some of your work and we'll be happy to direct you further.  One of the easiest ways to start learning how the game works is to look inside zz_JKG_Assets5.pk3 -> ext_data where most of the game's settings and data are stored as json-like files that are easy to edit and read.  You can find a guide to ext_data <a href="https://github.com/JKGDevs/JediKnightGalaxies/blob/develop/Extended%20Data.txt">here</a>.</p>
-            <p>If you're more of a coder, you could also try compiling the game yourself following the directions on the <a href="https://github.com/JKGDevs/JediKnightGalaxies/tree/develop#build-guide">Github Readme</a> and once you've got that down, maybe take a look at the <a href="https://github.com/JKGDevs/JediKnightGalaxies/issues">issues list</a> and see if you can help us fix one of them.  JKG is written primarily in C and C++, and uses LUA for scripting.</p>
+            <p>If you're more of a coder, try building the game yourself following the directions on the <a href="https://github.com/JKGDevs/JediKnightGalaxies/tree/develop#build-guide" title="JKG Source Code Readme">Github Readme</a> and/or the <a href="https://github.com/JKGDevs/JediKnightGalaxies/wiki/Compilation-Guide" title="JKG Compiling Guide.">Compilation Guide</a> and once you've sucessfully built the game and got it running from source, consider taking a look at the <a href="https://github.com/JKGDevs/JediKnightGalaxies/issues">issues list</a> and see if you can help us fix one of them.  Consider looking at <a href="https://github.com/JKGDevs/JediKnightGalaxies/issues?q=state%3Aopen%20label%3Aeasy" title="Github Easy Issues List">easy to fix issues</a>, to find something to work on.  JKG is written primarily in C and C++, and uses LUA for scripting.  Helping further document the project by contributing to the Wiki, writing new guides, or adding repository documentation such as the <a href="https://github.com/JKGDevs/JediKnightGalaxies/blob/develop/Accounts%20%26%20Admin%20System.txt" title="Account & Admin System">Accounts & Admin System</a>, <a href="https://github.com/JKGDevs/JediKnightGalaxies/blob/develop/Extended%20Data.txt" title="Documentation on JSON style data.">Extended Data</a>, or <a href="https://github.com/JKGDevs/JediKnightGalaxies/blob/develop/LuaCommands.txt" title="LUA Documentation">Lua Commands</a>.  Please note it also a good idea to check in the #development channel of Discord with developers before starting work on anything significant, to make sure something similar isn't already in development or going to cause conflicts.</p>
         </div>
 
         <div class="maindiv" id="platforms">
             <h2>What platforms will JKG be released on?</h2>
             <p>
-                JKG is currently only supported on Windows; however, Linux builds are also available, but not as widely tested.  MacOS builds are not available at this time, but the game should work/build on OSX (up till Catalina, but will not work on later versions of macOS without changes).
+                JKG is currently only supported on Windows; however, Linux builds are also available, but not as widely tested (we usually test on Debian-based forks like Mint).  MacOS builds are not available at this time, but the game should work/build on OSX (up till Catalina, but will not work on later versions of macOS without additional changes).
             </p>
         </div>
 
@@ -208,10 +208,22 @@
             <h2 id="FAQJA2Play">Is Jedi Academy required in order to play?</h2>
             <p>
                 Yes.  To play Jedi Knight Galaxies, you will first need Jedi Academy installed.  You will need to make sure you have v1.01 of Jedi Academy installed to ensure you have all the assets required.<br><br>
-                If you don't already own the game you can buy it from online stores such as <a href="http://store.steampowered.com/app/6020/">Steam</a>, <a href="http://www.amazon.com/Star-Wars-Jedi-Knight-Academy-Pc/dp/B0000A2MCN">Amazon</a>, or <a href="https://www.gog.com/game/star_wars_jedi_knight_jedi_academy">GOG</a>.  It frequently goes on sale for less than $4 USD and is still quite fun.  There are also many many mods available for Jedi Academy that make it well worth purchasing for more than just JKG.  For example, check some of the <a href="https://jkhub.org/mods/jediacademy/" title="List of recommended mods from JKHub.">recommended mods at JKHub.org</a>.
+                If you don't already own the game you can buy it from online stores such as <a href="http://store.steampowered.com/app/6020/">Steam</a>, <a href="http://www.amazon.com/Star-Wars-Jedi-Knight-Academy-Pc/dp/B0000A2MCN">Amazon</a>, or <a href="https://www.gog.com/game/star_wars_jedi_knight_jedi_academy">GOG</a>.  It frequently goes on sale for about $4 USD and is still quite fun.  There are also many many mods available for Jedi Academy that make it well worth purchasing for more than just JKG.  For example, check some of the <a href="https://jkhub.org/mods/jediacademy/" title="List of recommended mods from JKHub.">recommended mods at JKHub.org</a>.
             </p>
+            <hr>
+            <div class="cookie-banner" id="cookieBannerSteam">
+            <p>
+                To display the <a href="https://store.steampowered.com/widget/6020/" alt="Steam JKA link." title="View Steam directly here.">Steam Widget</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://store.steampowered.com/privacy_agreement/" title="Click here to view Steam's terms.">Steam</a>.  This feature is disabled until you opt in.
+            </p>
+            <button onclick="acceptCookiesIframe('steamprice', 'cookieBannerSteam', 'https://store.steampowered.com/widget/6020/')">Allow</button>
+            </div>
+
+            <div id="steamprice">
+                <iframe width="646" height="190" src="" frameborder="2"></iframe>
+             </div>
         </div>
 
+        
         <div class="maindiv" id="requirements">
             <h2>What are the minimum requirements of the mod?</h2>
             <pre id="minRequirements">[loading...]</pre>
