fixing missing id tag on faq page

--- a/faq.html
+++ b/faq.html
@@ -215,11 +215,11 @@
             <p>
                 To display the <a href="https://store.steampowered.com/widget/6020/" alt="Steam JKA link." title="View Steam directly here.">Steam Widget</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://store.steampowered.com/privacy_agreement/" title="Click here to view Steam's terms.">Steam</a>.  This feature is disabled until you opt in.
             </p>
-            <button onclick="acceptCookiesIframe('steamprice', 'cookieBannerSteam', 'https://store.steampowered.com/widget/6020/')">Allow</button>
+            <button onclick="acceptCookiesIframe('steamprice', 'cookieBannerSteam', 'https://store.steampowered.com/widget/6020/', 'steamwidget')">Allow</button>
             </div>
 
             <div id="steamprice">
-                <iframe width="646" height="190" src="" frameborder="2"></iframe>
+                <iframe id="steamwidget" width="646" height="190" src="https://store.steampowered.com/widget/6020/" frameborder="2"></iframe>
              </div>
         </div>
 
